Event Modal Overflow Issue Fix

--- a/Frontend/src/Components/styles/Event-Modal.css
+++ b/Frontend/src/Components/styles/Event-Modal.css
@@ -4,9 +4,10 @@
   left: 0;
   right: 0;
   width: 100%;
+  height: 100%;
   opacity: 0;
   visibility: hidden;
-  max-height: 100%;
+  /* max-height: 100vh; */
   background-color: rgba(0, 0, 0, 0.432);
 }
 .show {
